fix quote_video only play audio issue on Safari

--- a/fle_site/apps/main/static/css/_kickstarter_quote.css
+++ b/fle_site/apps/main/static/css/_kickstarter_quote.css
@@ -86,4 +86,8 @@
 video#quote_video {
   width: 100%;
   position: relative;
+  -webkit-transform:translateZ(2px);
+  -moz-transform:translateZ(2px);
+  -o-transform:translateZ(2px);
+  transform:translateZ(2px);
 }
